--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
-*.class
+.idea
+*.iml
+target
+
+*.jar
+*.crc
+
+.ipynb_checkpoints/
+*.ipynb
 *.log
+.DS_Store
+/bin/
+
+*.retry
+*.pyc
+current_commit.txt
+
+# Sample data files
+/data
+/fake_dataset.parquet
+*.log
+metastore_db
+scalerPath
+
+output
